# coursework4

./: README.md  pyproject.toml
src/: debug.py  headhunter.json  json_saver.py  main.py  parser.py  vacancy.py
