[tool.poetry]
name = "pythonproject11"
version = "0.1.0"
description = ""
authors = ["OceanDrive <oceann3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
flake8 = "^6.1.0"
black = "^23.10.0"
isort = "^5.12.0"

[tool.mypy]
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-lenght = 79

[tool.isort]
line-lenght = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

